[gd_scene load_steps=68 format=1]

[ext_resource path="res://Data/Character.gd" type="Script" id=1]
[ext_resource path="res://Data/Player.gd" type="Script" id=2]
[ext_resource path="res://Data/Player/Idle_R.png" type="Texture" id=3]
[ext_resource path="res://Data/Player/Updated peter/run_1.png" type="Texture" id=4]
[ext_resource path="res://Data/Player/Updated peter/idle.png" type="Texture" id=5]
[ext_resource path="res://Data/Player/Updated peter/run_2.png" type="Texture" id=6]
[ext_resource path="res://Data/Player/Updated peter/idle_crouch.png" type="Texture" id=7]
[ext_resource path="res://Data/Player/Idle_Prone_R.png" type="Texture" id=8]
[ext_resource path="res://Data/Player/Updated peter/crouch_walk_2.png" type="Texture" id=9]
[ext_resource path="res://Data/Player/Crawl_Prone_R1.png" type="Texture" id=10]
[ext_resource path="res://Data/Player/Crawl_Prone_R2.png" type="Texture" id=11]
[ext_resource path="res://Data/Armour/Flak Jacket.png" type="Texture" id=12]
[ext_resource path="res://Data/Player/Head.png" type="Texture" id=13]
[ext_resource path="res://Data/Player/Arm.png" type="Texture" id=14]
[ext_resource path="res://Data/Player/Updated peter/aim_arm.png" type="Texture" id=15]
[ext_resource path="res://Data/Player/Updated peter/aim_arm_shoot.png" type="Texture" id=16]
[ext_resource path="res://Data/NPC.gd" type="Script" id=17]
[ext_resource path="res://Data/Ally.gd" type="Script" id=18]
[ext_resource path="res://Data/Soldier.gd" type="Script" id=19]
[ext_resource path="res://Data/Player/Updated peter/prone.png" type="Texture" id=20]
[ext_resource path="res://Data/Player/Updated peter/prone_crawl.png" type="Texture" id=21]
[ext_resource path="res://Data/Player/Updated peter/prone_crawl_2.png" type="Texture" id=22]
[ext_resource path="res://Data/Player/Updated peter/head.png" type="Texture" id=23]
[ext_resource path="res://Data/Player/Updated peter/arm.png" type="Texture" id=24]
[ext_resource path="res://Data/Enemy.gd" type="Script" id=25]
[ext_resource path="res://Data/Zombie Soldier.gd" type="Script" id=26]
[ext_resource path="res://Data/Enemies/Zombie/Arm_l.png" type="Texture" id=27]
[ext_resource path="res://Data/Enemies/Zombie/idle.png" type="Texture" id=28]
[ext_resource path="res://Data/Enemies/Zombie/Run_1.png" type="Texture" id=29]
[ext_resource path="res://Data/Enemies/Zombie/Run_2.png" type="Texture" id=30]
[ext_resource path="res://Data/Enemies/Zombie/torso.png" type="Texture" id=31]
[ext_resource path="res://Data/Enemies/Zombie/Head.png" type="Texture" id=32]
[ext_resource path="res://Data/Enemies/Zombie/Enemies.tres" type="Animation" id=33]
[ext_resource path="res://Data/Enemies/Zombie/armWalk.tres" type="Animation" id=34]
[ext_resource path="res://Data/Health bar/health bar empty.png" type="Texture" id=35]
[ext_resource path="res://Data/Health bar/health bar full.png" type="Texture" id=36]
[ext_resource path="res://Data/Enemies/Zombie/Arm_r.png" type="Texture" id=37]
[ext_resource path="res://Data/Zombie.gd" type="Script" id=38]
[ext_resource path="res://Data/Creep.gd" type="Script" id=39]
[ext_resource path="res://Data/Enemies/Creep/creepidle.png" type="Texture" id=40]
[ext_resource path="res://Data/Enemies/Creep/creeprun.png" type="Texture" id=41]
[ext_resource path="res://Data/Enemies/Creep/Creep Head.png" type="Texture" id=42]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 6, 5 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 16, 5 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 6, 12 )

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 9.0

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 3, 2 )

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "run_r",
"speed": 10.0
}, {
"frames": [  ],
"loop": false,
"name": "jump_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "crouch_idle_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "prone_idle_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "crouch_walk_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "prone_crawl_r",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]

animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]

animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "shoot",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "aim",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 15 ) ],
"loop": false,
"name": "aim_shoot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 4, 10 )

[sub_resource type="RectangleShape2D" id=10]

custom_solver_bias = 0.0
extents = Vector2( 10, 3 )

[sub_resource type="CircleShape2D" id=11]

custom_solver_bias = 0.0
radius = 6.0

[sub_resource type="SpriteFrames" id=12]

animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle_r",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "prone_idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "prone_crawl",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=13]

animations = [ {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=14]

custom_solver_bias = 0.0
radius = 24.0
height = 258.0

[sub_resource type="RectangleShape2D" id=15]

custom_solver_bias = 0.0
extents = Vector2( 5.576, 21.633 )

[sub_resource type="SpriteFrames" id=16]

animations = [ {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 28 ), ExtResource( 30 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=17]

custom_solver_bias = 0.0
radius = 36.0
height = 231.0

[sub_resource type="Animation" id=18]

length = 1.0
loop = false
step = 0.5

[sub_resource type="Animation" id=19]

length = 1.0
loop = true
step = 0.1

[sub_resource type="Animation" id=20]

resource/name = "shoot"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("arm_r:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5, 5 ), Vector2( -7, 5 ), Vector2( -5, 5 ) ]
}

[sub_resource type="Animation" id=21]

resource/name = "shootflip"
length = 0.4
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("arm_r:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 5 ), Vector2( 7, 5 ), Vector2( 5, 5 ) ]
}

[sub_resource type="SpriteFrames" id=22]

animations = [ {
"frames": [ ExtResource( 35 ) ],
"loop": false,
"name": "health_empty",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": false,
"name": "health_full",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=23]

custom_solver_bias = 0.0
extents = Vector2( 10, 3 )

[sub_resource type="RectangleShape2D" id=24]

custom_solver_bias = 0.0
extents = Vector2( 10, 26 )

[sub_resource type="SpriteFrames" id=25]

animations = [ {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[node name="Character" type="KinematicBody2D"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Player" type="KinematicBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 11 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 4 )
shapes/1/trigger = true
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 4 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 4 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, -13 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 2 )
AIMSPEED = 0.05

[node name="GroundBox" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( 0, 11 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="LandingBox" type="Area2D" parent="Player"]

transform/pos = Vector2( 0, 5 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 14 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/LandingBox"]

transform/pos = Vector2( 0, 14 )
shape = SubResource( 5 )
trigger = true
_update_shape_index = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]

transform/pos = Vector2( 0, 5 )
frames = SubResource( 6 )
animation = "idle_r"

[node name="secondaryEquip" type="Sprite" parent="Player/AnimatedSprite"]

transform/pos = Vector2( -7, -7 )

[node name="Sprite" type="Sprite" parent="Player"]

visibility/visible = false
transform/pos = Vector2( 2, 5 )
transform/rot = -90.0
texture = ExtResource( 12 )

[node name="Head" type="AnimatedSprite" parent="Player"]

transform/pos = Vector2( 0, -12 )
frames = SubResource( 7 )
animation = "default"

[node name="Direction" type="RayCast2D" parent="Player"]

transform/rot = 90.0
enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="Arm" type="AnimatedSprite" parent="Player"]

z/z = 1
frames = SubResource( 8 )
animation = "idle"

[node name="Gun" type="Sprite" parent="Player/Arm"]

transform/pos = Vector2( 17, 0 )

[node name="fire_ready" type="Timer" parent="Player"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="reload" type="Timer" parent="Player"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="jump" type="Timer" parent="Player"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="prone" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( 0, 4 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 1

[node name="standing" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( 0, 4 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 2

[node name="headcollision" type="CollisionShape2D" parent="Player"]

transform/pos = Vector2( 0, -13 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 3

[node name="Label" type="Label" parent="Player"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -49.0
margin/right = 20.0
margin/bottom = -35.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="NPC" type="KinematicBody2D" parent="."]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 17 )

[node name="Ally" type="KinematicBody2D" parent="NPC"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 18 )

[node name="Soldier" type="KinematicBody2D" parent="NPC/Ally"]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3, 7 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 10 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 3, 7 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 11 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 3, -8 )
shapes/2/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 19 )

[node name="body" type="AnimatedSprite" parent="NPC/Ally/Soldier"]

transform/pos = Vector2( 3, 6 )
frames = SubResource( 12 )
animation = "idle_r"

[node name="head" type="AnimatedSprite" parent="NPC/Ally/Soldier"]

transform/pos = Vector2( 3, -9 )
frames = SubResource( 13 )
animation = "default"

[node name="Area2D" type="Area2D" parent="NPC/Ally/Soldier/head"]

input/pickable = true
shapes/0/shape = SubResource( 14 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 161, -1 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitorable = false
collision/layers = 2
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Ally/Soldier/head/Area2D"]

transform/pos = Vector2( 161, -1 )
transform/rot = 90.0
shape = SubResource( 14 )
trigger = true
_update_shape_index = 0

[node name="Arm" type="Sprite" parent="NPC/Ally/Soldier"]

texture = ExtResource( 24 )

[node name="Gun" type="Sprite" parent="NPC/Ally/Soldier/Arm"]

transform/pos = Vector2( 9, -1 )

[node name="standing" type="CollisionShape2D" parent="NPC/Ally/Soldier"]

transform/pos = Vector2( 3, 7 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[node name="prone" type="CollisionShape2D" parent="NPC/Ally/Soldier"]

transform/pos = Vector2( 3, 7 )
shape = SubResource( 10 )
trigger = false
_update_shape_index = 1

[node name="headcollision" type="CollisionShape2D" parent="NPC/Ally/Soldier"]

transform/pos = Vector2( 3, -8 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 2

[node name="Timer" type="Timer" parent="NPC/Ally/Soldier"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Attack" type="Timer" parent="NPC/Ally/Soldier"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="NPC/Ally/Soldier"]

enabled = false
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 15

[node name="Enemy" type="KinematicBody2D" parent="NPC"]

input/pickable = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 25 )

[node name="Zombie_soldier" type="KinematicBody2D" parent="NPC/Enemy" groups=[
"enemies",
]]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1.07604, 0, 0, 0.924514, 0, 4 )
shapes/0/trigger = false
collision/layers = 32770
collision/mask = 32770
collision/margin = 0.08
script/script = ExtResource( 26 )

[node name="Timer" type="Timer" parent="NPC/Enemy/Zombie_soldier"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="arm_l" type="Sprite" parent="NPC/Enemy/Zombie_soldier"]

transform/pos = Vector2( -5, 5 )
transform/rot = -8.89976
texture = ExtResource( 27 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="NPC/Enemy/Zombie_soldier"]

transform/pos = Vector2( 0, 18 )
frames = SubResource( 16 )
animation = "idle"

[node name="torso" type="Sprite" parent="NPC/Enemy/Zombie_soldier"]

transform/pos = Vector2( 0, 7 )
texture = ExtResource( 31 )

[node name="head" type="Sprite" parent="NPC/Enemy/Zombie_soldier"]

editor/display_folded = true
transform/pos = Vector2( 0, -6 )
texture = ExtResource( 32 )

[node name="cast" type="RayCast2D" parent="NPC/Enemy/Zombie_soldier/head"]

enabled = true
cast_to = Vector2( 0, 0 )
layer_mask = 1025
type_mask = 15

[node name="ViewArea" type="Area2D" parent="NPC/Enemy/Zombie_soldier/head"]

visibility/visible = false
transform/pos = Vector2( 2.5, -0.45397 )
input/pickable = true
shapes/0/shape = SubResource( 17 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 156.5, 2.45397 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Enemy/Zombie_soldier/head/ViewArea"]

transform/pos = Vector2( 156.5, 2.45397 )
transform/rot = 90.0
shape = SubResource( 17 )
trigger = true
_update_shape_index = 0

[node name="Vision" type="RayCast2D" parent="NPC/Enemy/Zombie_soldier"]

enabled = true
cast_to = Vector2( 0, 400 )
layer_mask = 1
type_mask = 15

[node name="arms" type="AnimationPlayer" parent="NPC/Enemy/Zombie_soldier"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Attack = SubResource( 18 )
anims/armRun = ExtResource( 33 )
anims/armWalk = ExtResource( 34 )
anims/fliparmWalk = SubResource( 19 )
anims/shoot = SubResource( 20 )
anims/shootflip = SubResource( 21 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="death" type="Timer" parent="NPC/Enemy/Zombie_soldier"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="healthBar" type="AnimatedSprite" parent="NPC/Enemy/Zombie_soldier"]

transform/pos = Vector2( -16, -30 )
frames = SubResource( 22 )
animation = "health_full"

[node name="Attack" type="Timer" parent="NPC/Enemy/Zombie_soldier"]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Enemy/Zombie_soldier"]

visibility/visible = false
transform/pos = Vector2( 0, 4 )
transform/scale = Vector2( 1.07604, 0.924514 )
shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="arm_r" type="Sprite" parent="NPC/Enemy/Zombie_soldier"]

transform/pos = Vector2( -5, 5 )
texture = ExtResource( 37 )

[node name="Gun" type="Sprite" parent="NPC/Enemy/Zombie_soldier/arm_r"]

transform/pos = Vector2( 18, 0 )

[node name="Area2D" type="Area2D" parent="NPC/Enemy/Zombie_soldier"]

visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 23 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 25 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Enemy/Zombie_soldier/Area2D"]

transform/pos = Vector2( 0, 25 )
shape = SubResource( 23 )
trigger = true
_update_shape_index = 0

[node name="Zombie" type="KinematicBody2D" parent="NPC/Enemy" groups=[
"enemies",
]]

editor/display_folded = true
visibility/visible = false
input/pickable = false
shapes/0/shape = SubResource( 15 )
shapes/0/transform = Matrix32( 1.07604, 0, 0, 0.924514, 0, 4 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 38 )

[node name="Timer" type="Timer" parent="NPC/Enemy/Zombie"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="arm_l" type="Sprite" parent="NPC/Enemy/Zombie"]

transform/pos = Vector2( -5, 5 )
transform/rot = -8.89976
texture = ExtResource( 27 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="NPC/Enemy/Zombie"]

transform/pos = Vector2( 0, 18 )
frames = SubResource( 16 )
animation = "idle"

[node name="torso" type="Sprite" parent="NPC/Enemy/Zombie"]

transform/pos = Vector2( 0, 7 )
texture = ExtResource( 31 )

[node name="head" type="Sprite" parent="NPC/Enemy/Zombie"]

transform/pos = Vector2( 0, -6 )
texture = ExtResource( 32 )

[node name="arm_r" type="Sprite" parent="NPC/Enemy/Zombie"]

transform/pos = Vector2( -5, 5 )
transform/rot = 8.89976
texture = ExtResource( 37 )

[node name="Vision" type="RayCast2D" parent="NPC/Enemy/Zombie"]

enabled = false
cast_to = Vector2( 0, 100 )
layer_mask = 1
type_mask = 15

[node name="arms" type="AnimationPlayer" parent="NPC/Enemy/Zombie"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Attack = SubResource( 18 )
anims/armRun = ExtResource( 33 )
anims/armWalk = ExtResource( 34 )
anims/fliparmWalk = SubResource( 19 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="death" type="Timer" parent="NPC/Enemy/Zombie"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="healthBar" type="AnimatedSprite" parent="NPC/Enemy/Zombie"]

transform/pos = Vector2( -16, -30 )
frames = SubResource( 22 )
animation = "health_full"

[node name="ViewArea" type="Area2D" parent="NPC/Enemy/Zombie"]

transform/pos = Vector2( 2.5, -6.45397 )
input/pickable = true
shapes/0/shape = SubResource( 17 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 143.5, -0.54603 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Enemy/Zombie/ViewArea"]

visibility/visible = false
transform/pos = Vector2( 143.5, -0.54603 )
transform/rot = 90.0
shape = SubResource( 17 )
trigger = true
_update_shape_index = 0

[node name="Attack" type="Timer" parent="NPC/Enemy/Zombie"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Area2D" type="Area2D" parent="NPC/Enemy/Zombie"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 23 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 25 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Enemy/Zombie/Area2D"]

transform/pos = Vector2( 0, 25 )
shape = SubResource( 23 )
trigger = true
_update_shape_index = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Enemy/Zombie"]

transform/pos = Vector2( 0, 4 )
transform/scale = Vector2( 1.07604, 0.924514 )
shape = SubResource( 15 )
trigger = false
_update_shape_index = 0

[node name="Creep" type="KinematicBody2D" parent="NPC/Enemy"]

editor/display_folded = true
visibility/visible = false
input/pickable = false
shapes/0/shape = SubResource( 24 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, -4 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 2
collision/margin = 0.08
script/script = ExtResource( 39 )

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="NPC/Enemy/Creep"]

transform/pos = Vector2( 0, -4 )
shape = SubResource( 24 )
trigger = false
_update_shape_index = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="NPC/Enemy/Creep"]

frames = SubResource( 25 )
animation = "idle"

[node name="Timer" type="Timer" parent="NPC/Enemy/Creep"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="Vision" type="RayCast2D" parent="NPC/Enemy/Creep"]

transform/rot = 90.0
enabled = false
cast_to = Vector2( 0, 100 )
layer_mask = 1
type_mask = 15

[node name="death" type="Timer" parent="NPC/Enemy/Creep"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="healthBar" type="AnimatedSprite" parent="NPC/Enemy/Creep"]

transform/pos = Vector2( -16, -30 )
frames = SubResource( 22 )
animation = "health_full"

[node name="ViewArea" type="Area2D" parent="NPC/Enemy/Creep"]

editor/display_folded = true
transform/pos = Vector2( 2.5, -6.45397 )
input/pickable = true
shapes/0/shape = SubResource( 17 )
shapes/0/transform = Matrix32( -4.37114e-08, -1, 1, -4.37114e-08, 143.5, -0.54603 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Enemy/Creep/ViewArea"]

transform/pos = Vector2( 143.5, -0.54603 )
transform/rot = 90.0
shape = SubResource( 17 )
trigger = true
_update_shape_index = 0

[node name="Attack" type="Timer" parent="NPC/Enemy/Creep"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="NPC/Enemy/Creep"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 23 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 25 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC/Enemy/Creep/Area2D"]

transform/pos = Vector2( 0, 25 )
shape = SubResource( 23 )
trigger = true
_update_shape_index = 0

[node name="head" type="Sprite" parent="NPC/Enemy/Creep"]

transform/pos = Vector2( 0, -16 )
texture = ExtResource( 42 )


